<resources>
    <string name="app_name">Cards</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="or">or</string>
    <string name="login_in">Login in…</string>
    <string name="sing_up">Don\'t have an account ? Click here to register</string>
    <string name="forgot_password">Forgot your password ?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_google_failure">Failed to sign in with Google.</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registering">Registering…</string>
    <string name="register_success">Register Successful.</string>
    <string name="recover_password">Recover Password</string>
    <string name="recovering_password">Recovering password…</string>
    <string name="recover_message1">An email was sent to\u0020</string>
    <string name="recover_message2">\nCheck your mailbox, in a few minutes, and follow the instructions to set a new password.</string>
    <string name="new_expense">New expense</string>
    <string name="date">Date:</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="price">Price:</string>
    <string-array name="installments" translatable="false">
        <item>1x</item>
        <item>2x</item>
        <item>3x</item>
        <item>4x</item>
        <item>5x</item>
        <item>6x</item>
        <item>7x</item>
        <item>8x</item>
        <item>9x</item>
        <item>10x</item>
        <item>11x</item>
        <item>12x</item>
        <item>13x</item>
        <item>14x</item>
        <item>15x</item>
        <item>16x</item>
        <item>17x</item>
        <item>18x</item>
        <item>19x</item>
        <item>20x</item>
        <item>21x</item>
        <item>22x</item>
        <item>23x</item>
        <item>24x</item>
    </string-array>
    <string name="installments_number">Installments number</string>
    <string name="installment" translatable="false">1x</string>
    <string name="adding_expense">Adding new expense…</string>
    <string name="adding_expense_success">Your expense is successful created.</string>
    <string name="max_price">Maximum price is\u0020</string>
    <string name="max_price_unity">\nUse a dot \".\" to indicate unity of\u0020</string>
    <string name="icon_date">Date Icon</string>
    <string name="icon_title">Title Icon</string>
    <string name="icon_description">Description Icon</string>
    <string name="icon_price">Price Icon</string>
    <string name="icon_installments">Card Icon</string>
    <string name="user_image">User profile image</string>
    <string name="icon_purple_card">Icon Purple Card</string>
    <string name="icon_mastercard">Icon MasterCard</string>
    <string name="icon_visa">Icon Visa</string>
    <string name="icon_elo">Icon Elo</string>
    <string name="icon_american_express">Icon American Express</string>
    <string name="icon_dinnersclub">Icon DinnersClub</string>
    <string name="icon_hipercard">Icon Hipercard</string>
    <string name="icon_yellow_card">Icon Yellow Card</string>
    <string name="icon_green_card">Icon Green Card</string>
    <string name="icon_grey_card">Icon Grey Card</string>
    <string name="icon_red_card">Icon Red Card</string>
    <string name="icon_blue_card">Icon Blue Card</string>
    <string name="chip_image">Chip Image</string>
    <string name="flag_image">Flag Image</string>
    <string name="icon_info_final_digits">Final Digits Info Icon</string>
    <string name="icon_info_date">Date Info Icon</string>
    <string name="icon_info_price">Price Info Icon</string>
    <string name="icon_info_better_day">Better Day Info Icon</string>
    <string name="icon_info_annuity">Annuity Info Notification Icon</string>
    <string name="icon_google">Icon login with Google</string>
    <string name="welcome">Welcome,</string>
    <string name="total">TOTAL</string>
    <string name="coin_type">$</string>
    <string name="coin_sub_unity">cents.</string>
    <string name="all_expenses">Expenses for selected month</string>
    <string name="expenses_loading">Loading expenses…</string>
    <string name="fabExpense">Add expense</string>
    <string name="fab_no_card">It\'s not possible to add expenses without adding a card first.</string>
    <string name="fabCard">Add Card</string>
    <string name="adding_new_card">Adding new card…</string>
    <string name="card_number" translatable="false">XXXX\u0020\u0020\u0020\u0020\u0020XXXX\u0020\u0020\u0020\u0020\u0020XXXX\u0020\u0020\u0020\u0020\u0020</string>
    <string name="card_number_0" translatable="false">XXXX</string>
    <string name="card_number_1" translatable="false">XXX</string>
    <string name="card_number_2" translatable="false">XX</string>
    <string name="card_number_3" translatable="false">X</string>
    <string name="card_title">Card title</string>
    <string name="final_numbers">Final digits</string>
    <string name="best_buy_date">Best buy date</string>
    <string name="optional_info">Optional Info</string>
    <string name="card_select">Card:</string>
    <string name="card_flag">Card flag</string>
    <string name="card_color">Card color</string>
    <string name="new_card">New card</string>
    <string name="update_card">Update card</string>
    <string name="select_flag">Select one flag</string>
    <string name="select_card_color">Select card color</string>
    <string name="visa" translatable="false">Visa</string>
    <string name="mastercard" translatable="false">MasterCard</string>
    <string name="elo" translatable="false">Elo</string>
    <string name="american_express" translatable="false">American\nExpress</string>
    <string name="dinners_club" translatable="false">Dinners Club</string>
    <string name="hipercard" translatable="false">Hipercard</string>
    <string name="card_title_empty">Fill card title to help identify your card.</string>
    <string name="card_number_empty">Fill the four final digits of your card to help identify your card.</string>
    <string name="date_empty">Fill best buy date with two digits. E.g.: 02</string>
    <string name="date_invalid">Invalid best buy date format. Fill the day in the range 01 to 31.</string>
    <string name="new_card_success">Card added successfully.</string>
    <string name="update_success">Card updated successfully.</string>
    <string name="cards_limit_reached">Maximum number of cards reached. It\'s only possible to have\u0020</string>
    <string name="cards_limit_reached_final">\u0020credit cards.</string>
    <string name="save_changes">Save changes</string>
    <string name="card_already_exists">Can\'t add two credit cards with the same final numbers.</string>
    <string name="select_card">Select one card</string>
    <string name="loading_cards">Loading cards…</string>
    <string name="no_internet">No internet available.\nPlease, check your connection !</string>
    <string name="info_digits">The last four digits of your credit card will help identify your expenses.</string>
    <string name="info_best_day">One day after your invoice is closed.\n From that day, purchases made on the credit card will only come in the following month.</string>
    <string name="info_date">Expense will appear in the open invoice month. If this month invoice is already closed, the expense will appear next month.</string>
    <string name="info_points">Total sum of your exchange/miles program points earned on each credit card bill.</string>
    <string name="info_annuity_notification">Notification to remind you to ask your bank to negotiate the price/installment of the annuity of your credit card.</string>
    <string name="expense_overview">Expense overview</string>
    <string name="purchased_date">Purchased date:</string>
    <string name="each_installment_price">Approximate price of each installment:</string>
    <string name="deleting_expense">Deleting expense…</string>
    <string name="view_overview_installments" translatable="false">x</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="delete_card">Delete Card</string>
    <string name="confirm_delete">Are you sure to delete this item and all installments ?</string>
    <string name="delete_success">Expense successfully deleted.</string>
    <string name="card_overview">Card Overview</string>
    <string name="zero_int" translatable="false">0</string>
    <string name="edit_notifications">Edit notification</string>
    <string name="edit_card">Edit card</string>
    <string name="negotiation_notification">Negotiation notification:</string>
    <string name="not_activated">Not activated</string>
    <string name="points">Points</string>
    <string name="annuity">Annuity</string>
    <string name="expense">Expenses</string>
    <string name="edit_points">Edit points</string>
    <string name="view_expenses">View Expenses</string>
    <string name="negotiation_month">Negotiation month:</string>
    <string name="not_specified">Not specified</string>
    <string name="view_expenses_denied">There\'s no expenses at selected date.</string>
    <string name="expenses_for">Expenses for</string>
    <string name="card_expenses">Card expenses</string>
    <string name="confirm_delete_card">Are you sure to delete this card and all his expenses ?</string>
    <string name="deleting_card">Deleting card…</string>
    <string name="notification_feature">This feature will be available in a few weeks. Update your app !</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="value">Value</string>
    <string name="value_invalid">Fill with a valid value.</string>
    <string name="add_failure">The value added to the total exceeds the limit of\u0020</string>
    <string name="add_failure_points">\u0020points.</string>
    <string name="subtract_failure">The subtracted value can\'t be greater than total.</string>
    <string name="loading_points">Loading points…</string>
    <string name="points_updated">Points updated successful.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="dot" translatable="false">.</string>
    <string name="save">Save</string>
    <string name="no_changes">No changes to save.</string>
    <string name="profile_updating">Updating profile…</string>
    <string name="profile_update_success">Profile updated successful !</string>
    <string name="profile_update_failure">Oops! Something went wrong. Try again !</string>
    <string name="subject">Subject:</string>
    <string name="your_email">Your e-mail</string>
    <string name="message">Message</string>
    <string name="send_message">Send message</string>
    <string name="email_to" translatable="false">cellopcamara@gmail.com</string>
    <string name="email_client">Choose an email client</string>
    <string name="sent_email_message">Your message was sent by your email client ? Saying YES, this screen will close and it will return to the application.</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="cards">Cards</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="evaluate">Evaluate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="yellow">Yellow</string>
    <string name="purple">Purple</string>
    <string name="green">Green</string>
    <string name="grey">Grey</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
</resources>