<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutVisa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/layoutMasterCard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewVisa"
            android:layout_width="@dimen/creditCardFlagWidth"
            android:layout_height="@dimen/creditCardSmallFlagHeight"
            android:contentDescription="@string/icon_visa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/small_flag_visa"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textViewVisa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/visa"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewVisa" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutMasterCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/layoutElo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/layoutVisa"
        app:layout_constraintTop_toTopOf="@+id/layoutVisa">

        <ImageView
            android:id="@+id/imageViewMasterCard"
            android:layout_width="@dimen/creditCardFlagWidth"
            android:layout_height="@dimen/creditCardSmallFlagHeight"
            android:contentDescription="@string/icon_mastercard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/small_flag_mastercard" />

        <TextView
            android:id="@+id/textViewMasterCard"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:text="@string/mastercard"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewMasterCard" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutElo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/layoutMasterCard"
        app:layout_constraintTop_toTopOf="@+id/layoutMasterCard">

        <ImageView
            android:id="@+id/imageViewElo"
            android:layout_width="@dimen/creditCardFlagWidth"
            android:layout_height="@dimen/creditCardSmallFlagHeight"
            android:contentDescription="@string/icon_elo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/small_flag_elo"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textViewElo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/elo"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewElo" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutDinnersClub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/layoutMasterCard"
        app:layout_constraintStart_toStartOf="@+id/layoutMasterCard"
        app:layout_constraintTop_toTopOf="@+id/layoutAmericanExpress">

        <ImageView
            android:id="@+id/imageViewDinnersClub"
            android:layout_width="@dimen/creditCardFlagWidth"
            android:layout_height="@dimen/creditCardSmallFlagHeight"
            android:contentDescription="@string/icon_dinnersclub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/small_flag_dinners_club" />

        <TextView
            android:id="@+id/textViewDinnersClub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dinners_club"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewDinnersClub" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutHipercard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/layoutElo"
        app:layout_constraintStart_toStartOf="@+id/layoutElo"
        app:layout_constraintTop_toTopOf="@+id/layoutDinnersClub">

        <ImageView
            android:id="@+id/imageViewHipercard"
            android:layout_width="@dimen/creditCardFlagWidth"
            android:layout_height="@dimen/creditCardSmallFlagHeight"
            android:contentDescription="@string/icon_hipercard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/small_flag_hipercard" />

        <TextView
            android:id="@+id/textViewHipercard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hipercard"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewHipercard" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layoutAmericanExpress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/layoutVisa"
        app:layout_constraintStart_toStartOf="@+id/layoutVisa"
        app:layout_constraintTop_toBottomOf="@+id/layoutMasterCard">

        <ImageView
            android:id="@+id/imageViewAmericanExpress"
            android:layout_width="@dimen/creditCardFlagWidth"
            android:layout_height="@dimen/creditCardSmallFlagHeight"
            android:contentDescription="@string/icon_american_express"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/small_flag_american_express" />

        <TextView
            android:id="@+id/textViewAmericanExpress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/american_express"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAmericanExpress" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>