<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/icon_yellow_card"
                android:tint="@color/cardYellow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_credit_card"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textViewYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical|start"
                android:text="@string/yellow"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewYellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewYellow"
                app:layout_constraintTop_toTopOf="@+id/imageViewYellow" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutPurple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/layoutYellow"
            app:layout_constraintStart_toStartOf="@+id/layoutYellow"
            app:layout_constraintTop_toBottomOf="@+id/layoutYellow">

            <ImageView
                android:id="@+id/imageViewPurple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/icon_purple_card"
                android:tint="@color/cardPurple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_credit_card"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textViewPurple"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical|start"
                android:text="@string/purple"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewPurple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewPurple"
                app:layout_constraintTop_toTopOf="@+id/imageViewPurple" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutGreen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/layoutPurple"
            app:layout_constraintStart_toStartOf="@+id/layoutPurple"
            app:layout_constraintTop_toBottomOf="@+id/layoutPurple">

            <ImageView
                android:id="@+id/imageViewGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/icon_green_card"
                android:tint="@color/cardGreen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_credit_card"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textViewGreen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical|start"
                android:text="@string/green"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewGreen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewGreen"
                app:layout_constraintTop_toTopOf="@+id/imageViewGreen" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutGrey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/layoutGreen"
            app:layout_constraintStart_toStartOf="@+id/layoutGreen"
            app:layout_constraintTop_toBottomOf="@+id/layoutGreen">

            <ImageView
                android:id="@+id/imageViewGrey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/icon_grey_card"
                android:tint="@color/cardGrey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_credit_card"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textViewGrey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical|start"
                android:text="@string/grey"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewGrey"
                app:layout_constraintTop_toTopOf="@+id/imageViewGrey" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutRed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/layoutGrey"
            app:layout_constraintStart_toStartOf="@+id/layoutGrey"
            app:layout_constraintTop_toBottomOf="@+id/layoutGrey">

            <ImageView
                android:id="@+id/imageViewRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/icon_red_card"
                android:tint="@color/cardRed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_credit_card"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textViewRed"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical|start"
                android:text="@string/red"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewRed"
                app:layout_constraintTop_toTopOf="@+id/imageViewRed" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layoutBlue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/layoutRed"
            app:layout_constraintStart_toStartOf="@+id/layoutRed"
            app:layout_constraintTop_toBottomOf="@+id/layoutRed">

            <ImageView
                android:id="@+id/imageViewBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/icon_blue_card"
                android:tint="@color/cardBlue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_credit_card"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/textViewBlue"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical|start"
                android:text="@string/blue"
                app:autoSizeMaxTextSize="14sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewBlue"
                app:layout_constraintTop_toTopOf="@+id/imageViewBlue" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>